Add register view

--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -8,19 +8,17 @@
   <body>
     <div class="login-page">
       <div class="form">
-        <h3>Login</h3>
-        <form action="/login" class="login-form" method="post">
+        <h3>Register</h3>
+        <form action="/register" class="register-form" method="post">
           <input type="text" name="username" placeholder="username" />
           <input type="password" name="password" placeholder="password" />
-          <button type="submit">login</button>
+          <button type="submit">create</button>
           <p class="message">
-            Not registered? <a href="/register">Create an account</a>
+            Already registered? <a href="/login">Sign In</a>
           </p>
           <% if (errors != null) { %> <% errors.forEach(function(err){ %>
           <p class="message error"><%= err %></p>
-          <% }); %> <% } if (success != null) { %>
-          <p class="message success"><%= success %></p>
-          <% } %>
+          <% }); %> <% } %>
         </form>
       </div>
     </div>
