Clean-up styles

--- a/app/views/chatroom.ejs
+++ b/app/views/chatroom.ejs
@@ -2,23 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Chat IO</title>
+    <title>Chat</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <link
-      rel="stylesheet prefetch"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
-    />
   </head>
   <body>
     <div class="container clearfix">
       <div class="chat">
         <div class="chat-header clearfix">
-          <img src="<%= user.picture %>" alt="avatar" />
           <div class="chat-about">
             <div class="chat-room"><%= room.title %></div>
             <div class="chat-num-users">User(s)</div>
           </div>
-          <i class="fa fa-users"></i>
         </div>
         <!-- end chat-header -->
 
