--- a/app/views/rooms.ejs
+++ b/app/views/rooms.ejs
@@ -2,38 +2,25 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Chat IO</title>
+    <title>Chat</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <link
-      rel="stylesheet prefetch"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
-    />
   </head>
   <body>
-    <div class="container clearfix" style="width: 500px;">
-      <div class="controls" style="border: none; width: 100%;">
-        <a
-          href="/logout"
-          class="logout-btn"
-          style="width: auto; padding: 13px; font-size: 12px;"
-          >Logout</a
-        >
+    <div class="container">
+      <div class="controls">
+        <a href="/logout" class="logout-btn">Logout</a>
       </div>
 
-      <div class="room" style="width: 100%;">
-        <div class="room-header clearfix">
+      <div class="room">
+        <div class="room-header">
           <div class="room-about">
             <div class="room-title">Rooms</div>
             <div class="room-num-rooms"><%= rooms.length %> Room(s)</div>
           </div>
-          <i class="fa fa-th-list"></i>
         </div>
         <!-- end room-header -->
 
-        <div
-          class="room-create clearfix"
-          style="border-bottom: 2px solid white;"
-        >
+        <div class="room-create">
           <input
             type="text"
             name="title"
@@ -54,10 +41,7 @@
               </li>
             </a>
             <% }); %> <% } else { %>
-            <p
-              class="message"
-              style="text-align: center; padding: 0; margin: 0;"
-            >
+            <p class="message">
               Create your first room!
             </p>
             <% } %>
