--- a/app/views/chatroom.ejs
+++ b/app/views/chatroom.ejs
@@ -43,11 +43,10 @@
       </div>
     </div>
     <!-- end container -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/main.js"></script>
     <script>
-      $(function() {
+      document.addEventListener("DOMContentLoaded", function(event) {
         app.chat("<%= room.id %>", "<%= user.username %>");
       });
     </script>
