--- a/app/views/rooms.ejs
+++ b/app/views/rooms.ejs
@@ -52,11 +52,10 @@
       <!-- end room -->
     </div>
     <!-- end container -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/main.js"></script>
     <script>
-      $(function() {
+      document.addEventListener("DOMContentLoaded", function(event) {
         app.rooms();
       });
     </script>
